--- a/index.ipynb
+++ b/index.ipynb
@@ -200,8 +200,7 @@
     }
    ],
    "source": [
-    "three_x_squared_minus_eleven = ([(3, 11), (2, 0)])\n",
-    "output_at(three_x_squared_minus_eleven, 2) \n",
+    "output_at((3, 11), (2, 0)], 2) \n",
     "output_at(three_x_squared_minus_eleven, 3) # 16"
    ]
   },
