--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
     }
    ],
    "source": [
-    "output_at([(3, 11), (2, 0)], 2) \n",
+    "output_at([(3, 11), (2, 0)], [2]) \n",
     "output_at([(3, 11), (2, 0)], 3) # 16"
    ]
   },
