Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "def output_at(term, degree, input_value):\n",
-    "    return term[0]*input_value**degree[0]-term[1]*input_value**degree[1]"
+    "    return term[0]*input_value**degree[0]-term[1]*input_value[0]**degree[1]"
    ]
   },
   {
