--- a/index.ipynb
+++ b/index.ipynb
@@ -248,12 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 1), (15, 0)]\n"
+     ]
+    }
+   ],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
-    "four_x_plus_fifteen"
+    "print(four_x_plus_fifteen)"
    ]
   },
   {
