Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,7 +261,8 @@
    ],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
-    "print(four_x_plus_fifteen)"
+    "hello = \"hello\"\n",
+    "hello"
    ]
   },
   {
