Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,21 +248,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(4, 1), (15, 0)]\n"
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(hello)? (<ipython-input-10-34270140c413>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-34270140c413>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print hello\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(hello)?\n"
      ]
     }
    ],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
     "hello = \"hello\"\n",
-    "hello"
+    "print()"
    ]
   },
   {
