--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def output_at(list_of_terms, x_value):\n",
+    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
+    "    return sum(outputs)\n",
+    "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
+    "output_at(three_x_squared_minus_eleven, 2) # 1 \n",
+    "output_at(three_x_squared_minus_eleven, 3) # 16"
+   ]
   },
   {
    "cell_type": "markdown",
